[tool.poetry]
name = "hazel-auth"
version = "0.1.dev0"
description = "Simple user registration and authentication library"
authors = ["Abdul-Hakeem Shaibu <hkmshb@gmail.com>"]
keywords = ["authentication", "registration", "users"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
"zope.interface" = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pytest-cov = "^2.5"
